# zener

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  VERSION.txt  app.toml  bench.sh  build.sh  compile_commands.json  conandata.yml  conanfile.txt  config.toml  docker-compose.yaml  force_kill.sh  kill.sh  temp.txt  translate_logs.sh
cmd/: CMakeLists.txt
cmd/server/: main.cpp
config/: app.ini  app.toml  config.h  config.toml  readme.md
database/: bootstrap.sql
docs/: changelog.md  debugging_and_optimization.md  design.md  graceful_shutdown_fix.md  log_rotation.md  naming_convention.md  压力测试.md
docs/optimizations/: bugfixes.md
include/: common.h
include/buffer/: buffer.h  readme.md
include/config/: config.h
include/core/: epoller.h  init.h  readme.md  restful.h  server.h  tcp.h
include/database/: database.h  db_mysql.h  readme.md  sql_connector.h  sqlconnRAII.hpp
include/error/: error.h
include/file/: file.h
include/framework/: restfull.h
include/http/: conn.h  context.h  entity.h  file_cache.h  header.h  http.h  readme.md  request.h  response.h  router.h
include/log/: CtLog.h  _logger.h  log.h  logger.h  use_spd_log.h
include/optimizations/: highconcurrency.h
include/pool/: _threadpool.h  _threadpool1.h  easy_threadpool.h  safequeue.h  threadpool.h
include/serialize/: serialize.h
include/serialize/json/: json.h
include/task/: readme.md  threadpool.h  threadpool_1.h
include/task/timer/: Itimer.h  heaptimer.h  maptimer.h  readme.md  timer.h
include/utils/: blockdeque.h  defer.h  free.hpp  hash.hpp  release.hpp  safequeue.h  safequeue.hpp
include/utils/error/: error.h
include/utils/log/: _logger.h  logger.h  use_spd_log.h
scripts/: benchmark.sh  build_all.sh  create_symlinks.sh  run_server.sh  test_log_rotation.sh  zener_kill.sh
sql/: bootstrap.sql
src/: CMakeLists.txt  main.cpp
src/buffer/: buffer.cpp
src/cmd/: CMakeLists.txt
src/cmd/server/: main.cpp
src/config/: config.cpp
src/core/: epoller.cpp  init.cpp  server.cpp
src/database/: sql_connector.cpp
src/error/: error.cpp
src/file/: file.cpp
src/http/: conn.cpp  file_cache.cpp  request.cpp  response.cpp
src/log/: _logger.cpp  log.cpp  use_spd_log.cpp
src/task/: threadpool.cpp  threadpool_1.cpp
src/task/timer/: heaptimer.cpp  maptimer.cpp  timer.cpp
src/utils/: defer.cpp  safequeue.cpp
src/utils/error/: error.cpp
src/utils/log/: _logger.cpp  use_spd_log.cpp
tests/: CMakeLists.txt
tests/config_test/: main.cpp
tests/hardware_test/: main.cpp
tests/log_test/: main.cpp
webbench-1.5/: Makefile  tags  webbench  webbench.c
